fixed some overlapping css and javascript error

--- a/css/styles.css
+++ b/css/styles.css
@@ -284,49 +284,6 @@ address
     font-size: 70px;
   }
 }
-@media only screen and (max-width: 767px)
-{
-  section:nth-of-type(2)
-  {
-    margin-top: 0 !important;
-  }
-  section:last-of-type
-  {
-    margin-bottom: 20px;
-  }
-  .main-heading
-  {
-    font-size: 60px;
-  }
-  .upfront
-  {
-    width: 50%;
-  }
-  .content
-  {
-    padding: 0 20px 0;
-  }
-  #gallery
-  {
-    height: 500px;
-  }
-  input, textarea, select
-  {
-    width: 100%;
-  }
-  input[type="submit"]
-  {
-    width: 70%;
-  }
-}
-@media only screen and (max-width: 570px)
-{
-  input[type="submit"], input[type="reset"]
-  {
-    width: 100%;
-    margin: 20px 0 0 0;
-  }
-=======
 
 h4.shoph4{
 	font-family: "Arial";
@@ -351,15 +308,14 @@ h4.shoph4{
 }
 
 .prodimages{
-	display:flex;
+	display: flex;
+	align-items: center;
 	max-height:250px;
 	margin-left: auto;
     margin-right: auto;
-	margin-top:auto;
-	margin-bottom:auto;
 }
 
-h1{
+h1.shoph1{
 	font-family: "Pacifico", serif;
 	color: #A439A4;
 	text-align: center;
@@ -494,5 +450,52 @@ b{
 
 #basketinfo{
 	text-align:left;
->>>>>>> f38b6a1f2e1f4a5fedcb7dcc1f2ae87c2d8b5682
+}
+
+input.shopinput{
+	width: 25px;
+}
+
+@media only screen and (max-width: 767px)
+{
+  section:nth-of-type(2)
+  {
+    margin-top: 0 !important;
+  }
+  section:last-of-type
+  {
+    margin-bottom: 20px;
+  }
+  .main-heading
+  {
+    font-size: 60px;
+  }
+  .upfront
+  {
+    width: 50%;
+  }
+  .content
+  {
+    padding: 0 20px 0;
+  }
+  #gallery
+  {
+    height: 500px;
+  }
+  input, textarea, select
+  {
+    width: 100%;
+  }
+  input[type="submit"]
+  {
+    width: 70%;
+  }
+}
+@media only screen and (max-width: 570px)
+{
+  input[type="submit"], input[type="reset"]
+  {
+    width: 100%;
+    margin: 20px 0 0 0;
+  }
 }
